--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/Millie.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/Millie.cfg
@@ -23,18 +23,34 @@
 				longitudeOfAscendingNode = 0
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/PluginData/Millie_Ring.png
 				useNewShader = true
-				color = 1,1,1,1
+				color = 1.2,1.2,1.2,1.2
 				lockRotation = true
 				rotationPeriod = 0
 				penumbraMultiplier = 10
 				steps = 6400
 				tiles = 0
+			}														// up to you to decide whether Millie is a reference to Triston's pet dog or a certain character from a certain animated show on youtube regarding mercenaries from hell
+			Value													// or even that one silly cat
+			{
+				innerRadius = 3000
+				outerRadius = 6000
+				angle = 0
+				unlit = true
+				longitudeOfAscendingNode = 0
+				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/PluginData/Millie_Dust.png
+				useNewShader = true
+				color = 0.1923078,0.157692194,0.1769232,1
+				lockRotation = true
+				rotationPeriod = 25477.0763647795
+				penumbraMultiplier = 10
+				steps = 6400
+				tiles = 1
 			}
 		}
 		Properties
 		{
 			displayName = Millie
-			description = Millie is a small world occupying the trailing lagrange point of Pyri.\n -CloverDove
+			description = Millie's a large icy planet occupying Pyri's L5 point. It's really not that dense! Despite being larger than Kerbin, which is still used as the standard for measuring planets, it's still only a quarter of its mass or so. \n\nTelescopes have shown us that Millie's a colorful object. Along with its rings, the most peculiar thing about this object must be the strange large obstruction our telescopes have picked up. It seems like it's periodic, and there's a fair bit of radiation visible in the infrared spectrum. What exactly's happening over there? \n\n-cloverdove
 			
 			//do not leave this as the placeholder radius
 			radius = 684900
@@ -52,11 +68,51 @@
             {
 
             }
+			Biomes
+			{
+				Biome
+				{
+					name = Redlands
+					displayName = Redlands
+					color = #612C1A
+				}
+				Biome
+				{
+					name = Bluelands
+					displayName = Bluelands
+					color = #112D54
+				}
+				Biome
+				{
+					name = Goldlands
+					displayName = Goldlands
+					color = #AC8250
+				}
+				Biome
+				{
+					name = Betweenlands
+					displayName = The Betweenlands
+					color = #665265
+				}
+				Biome
+				{
+					name = MoxxieBasin
+					displayName = Moxxie's Basin
+					color = #1F0A19
+				}
+				Biome
+				{
+					name = StrawberryBasin
+					displayName = Strawberry Basin
+					color = #3D1431
+				}
+			}
 		}
 		Orbit
 		{
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = #561A3B
+			color = #E97639
+			iconColor = 1,1,1,1
 			
 			referenceBody = PJ2/AB_Barycenter
 			//1 kAU (kerbal-scale AU)
@@ -71,6 +127,7 @@
 			argumentOfPeriapsis = 349
 			longitudeOfAscendingNode = 151
 			meanAnomalyAtEpochD = 39
+			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/PluginData/clover.png
 		}
 		ScaledVersion
 		{
@@ -79,14 +136,11 @@
 			fadeEnd = 40000
 			Material
 			{
-				
-				specColor = 0.069231,0.05384639,0.03461562,1
+				color = 1.6,1.6,1.6,1.6
+				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/PluginData/Millie_Color.png
+				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/PluginData/Millie_Normal.png
+				specColor = 0.115384601,0.0961538479,0.115384698,1
 				shininess = 0.03
-			}
-			OnDemand
-			{
-				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/PluginData/Millie_Color.dds
-				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/PluginData/Millie_Normal.dds
 			}
 		}
 		PQS
@@ -163,7 +217,7 @@
 				}
 				VertexColorMap
 				{
-					map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/PluginData/Millie_Color.dds
+					map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/PluginData/Millie_Color.png
 					order = 1
 					enabled = true
 				}
@@ -197,3 +251,62 @@
 		}
 	}
 }
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠰⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡘⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⢀⠠⠤⢴⣒⡄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢰⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠂⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠁⠄⠄⠄⠄⠉⠛⠢⣠⠄⠈⠄⠄⠄⠄⠄⠄⡈⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠂⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⣀⣠⡤⠄⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠕⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⠈⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⢀⣴⠐⠋⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢠⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠁⠄⠄⠄⠄⡀⣀⠄⠄⢠⠄⢠⠄⠰⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡀⠂⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⡠⠈⠛⠈⠁⠄⠄⠄⠄⠄⠄⠐⠤⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡔⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡀⠄⡀⢀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠂⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢠⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⡠⠤⠐⠂⠊⠉⠁⠁⠄⠄⠄⠄⠄⠈⠁⠈⠄⠄⠂⠐⠂⠄⠄⠄⠄⠄
+//⠂⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡀⠐⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⢠⠐⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡤⠐⠊⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⡠⠐⠈⠄⠄⠄⢸⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣆⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⡴⠃⠄⠄⠄⢀⠄⠄⢈⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠆⠄⢀⠹⡄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⢠⡴⠁⠄⠄⣠⡀⠉⠄⠄⢐⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡀⠄⢰⠋⠄⠹⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⣠⠊⠁⠄⢀⡾⠋⠁⢈⡏⠄⠨⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠠⠁⠄⡼⠄⠄⠄⠱⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠠⠇⠄⢀⣴⠟⠁⠄⠄⠘⠑⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡝⠄⠰⡇⠄⠄⠄⠄⠹⡀⠄⠄⠄⠄⠄⢀⣔⡂⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣠⠖⠹⡄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠐⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⢠⠇⢀⡴⠋⠄⠄⠄⠄⢀⠆⠁⠄⠄⢀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠠⡇⠄⠨⠄⠄⠄⠠⠄⠄⠑⢄⠄⠄⠄⢠⡼⠸⣷⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡾⠃⠄⠄⣷⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⢦⡀⠠⠒⠁⠄⠄⠄⠄⠄⠄⠘⠄⠄⠄⠄⠰⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⠄⠄⣸⠄⠄⠄⠄⠄⠄⠄⠈⠢⡀⠄⣼⠁⠄⢿⣧⡀⠄⠄⠄⠄⠄⠄⠄⠄⢀⡾⠋⠄⢀⠄⠄⢸⣤⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⢀⡏⠄⠄⠄⠄⠄⠄⠄⠄⠐⠄⠄⠄⠄⠄⠄⢱⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⠄⠄⡷⠄⠄⠄⠄⠄⠄⠂⠄⠄⠈⣼⠷⢤⣀⠄⠈⣧⡀⠄⠄⠄⠄⠄⣠⡖⠁⠄⢀⡶⠋⢿⡀⠄⢻⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠞⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠸⡄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⢠⣟⡁⢸⠆⠄⠄⠹⣷⠄⠄⠄⣠⠞⠁⠄⢀⠜⠋⠄⠄⢸⣧⡀⠘⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠁⠄⠄⠄⠄⠄⠄⠄⠄⢣⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡌⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⣸⡃⠉⠋⠄⠄⠄⠄⠘⣷⡤⠞⠁⢀⣠⠞⠁⠄⠄⠄⠄⠄⠹⡇⠄⢹⡄⠄⠄⠄⠄⠄⠄⠄⣠⡀⢴⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⠴⠰⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡆⠄⠄⠄⠄⠄⢀⣀⠤⠄⠒⠈⠋⠉⠁⢀⠄⠇⠄⠄⠄⠄⠄⠄⠄⠄⢠⡏⠉⢹⠂⠄⠄⠄⠄⠄⠘⢷⣀⡴⠛⠁⢀⢀⣠⡾⢷⣄⠄⠄⢻⡀⠘⡇⠄⠄⠄⢀⣰⣶⠟⠉⠄⡿⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣠⠤⠒⠋⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠁⠄⠄
+//⠄⠄⠄⠄⡀⡊⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⣀⠤⠄⠒⠉⠁⠄⢀⣀⠤⠖⠒⠂⠉⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⣼⣿⢲⣟⣄⡀⠄⠄⠄⠄⠄⠈⠻⣅⣤⣶⣿⠿⠟⠛⣿⣿⣆⠄⠘⢇⠄⢹⡂⣀⡴⠶⠋⠄⢠⡀⢐⡇⠄⠄⠄⠄⡀⢀⡀⠤⠄⠂⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠠⠄⠄⠄⠄⠄⠄
+//⠄⠄⡠⠎⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⠠⠒⠉⠄⠄⣀⡀⠠⠐⠈⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡠⣄⠄⢸⡟⣺⣿⣿⣟⣿⡟⣟⠶⣦⣤⡶⠚⠉⠄⢻⣧⠄⠄⠄⠈⢃⠛⣧⠄⢘⣤⡴⠟⠉⠄⠄⠄⣠⠁⠄⣸⠧⠒⠒⠒⠋⠁⠄⠄⣀⡠⠤⠔⠊⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⠠⠐⠈⠄⠄⣀⠴⠚⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣷⠈⠰⣿⣾⣿⣿⣿⣿⣿⣷⣿⣷⣿⣽⣿⣶⣤⣀⣀⣙⣧⣤⣶⡿⠃⠄⠘⢿⡙⠁⠄⠄⠄⠄⠄⠨⣄⠉⢂⡯⠤⠤⠰⠒⠒⠒⠚⠉⠁⠄⠄⠄⠄⠄⠄⢀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠁⠄⠄⠄⠄⠈⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣠⠔⠁⠄⠄⠰⠶⠯⢤⣤⣀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡏⠄⠄⠈⠙⠻⠿⠟⠛⠛⠛⠛⠻⢿⣿⣿⠿⡄⠄⠄⠈⠉⠙⠛⠦⣄⣀⣀⣈⣯⣀⠄⠄⠄⠄⢀⣯⡀⠈⡽⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡰⠄⠄⡠⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠉⠑⠒⠢⠤⠤⣠⣀⡀⠄⠈⠉⠒⠦⣄⣀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⠄⠄⢀⡀⠄⢠⠞⡄⠄⠄⠄⠄⠄⣹⡤⠒⢳⡄⠄⠄⠄⠄⠄⠄⣀⠼⢛⣶⣯⣭⣿⣲⡦⣄⠔⢉⡟⣱⠇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠐⠁⢀⠰⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡀⠔⠋⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠉⠓⠢⠄⣄⠄⠈⠉⠒⠦⢄⣀⠄⠄⠄⠄⠄⠄⣀⣠⡤⠶⠾⠂⢠⡞⢳⠰⠁⣀⣧⣶⣶⣀⠄⡆⠈⢧⠄⠄⢿⡀⠄⠄⠄⣠⢴⡿⢿⣿⣿⣿⣿⣿⣿⣿⣶⣷⣏⣴⡿⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡠⠃⠄⣠⠟⠁⠄⠄⠄⠄⠄⠄⡤⠞⠉⠃⠄⠄⢀⡤⠈⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡀
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠉⠒⠲⢤⣀⠄⠄⠉⠂⠄⠄⠠⢾⡋⠄⠄⠄⠄⣀⣯⣴⣾⡿⡿⠛⠉⢁⠘⣿⣆⡇⢀⠈⢳⡀⠈⢧⢀⡤⠞⠁⢀⠸⠌⠉⠉⠉⠛⢿⣿⣿⢿⡿⠧⠈⠁⠄⠄⠄⠄⠄⠄⠄⠄⡰⠋⠄⠄⣼⡋⠄⠄⠄⠄⠄⠄⠄⠈⠄⣴⠁⠄⢀⠔⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⣀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠘⠄⠄⠄⠄⢁⠄⠄⢸⠃⠄⠄⠈⢳⡀⠄⠄⠄⠙⢿⣧⣀⠠⢴⣠⡿⡤⠆⠄⢻⣯⡙⡄⠈⢧⠄⠘⠋⠄⡠⠔⠉⠄⠄⠄⠄⠄⠄⠄⠈⠻⠿⠷⠤⠦⠴⠤⠄⠄⠄⠄⠄⠄⠮⣁⠄⠄⠄⠈⠳⢄⡀⣀⠄⠄⠄⠄⠄⡸⠄⢀⡖⠁⠄⠄⠄⠄⠄⠄⠐⠄⠄⠄⠄⠄⠄⡀⣀⡰⠟
+//⠟⢧⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠄⢸⡇⠄⣿⠄⠄⠄⠄⠈⢳⡄⠄⠄⠄⠈⠉⠙⢷⣮⣅⠳⡉⠄⠄⠄⠙⢿⣇⠄⠘⠇⢀⡠⠒⠁⣠⡆⠄⣠⣿⣀⣠⣄⣀⢤⠄⠄⠄⠄⠄⠠⠃⠄⠄⠄⠄⠄⠄⠄⠄⠙⠢⠄⠄⢀⡴⠋⠁⠄⠄⠄⠄⠈⢀⠄⠉⠄⠄⠄⠄⠄⠄⠄⡌⠄⠄⠄⠄⠄⢀⣤⠞⠋⠄⠄
+//⠄⠘⣆⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣸⡇⢀⡟⠄⠄⠄⠄⠄⠄⠳⣄⠄⢀⣤⣤⣄⡈⠯⠻⠷⢶⡶⠶⡻⣶⠞⠚⠄⠄⠈⠁⠄⠄⣴⣟⣧⣾⠿⠿⠛⠁⠹⣷⣸⢀⡀⠄⣀⡴⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡶⠋⠄⠄⠄⠄⠄⠄⠄⠄⠉⠄⠄⠄⠄⠄⠄⠄⢠⡞⠁⠄⠄⢀⣤⠶⠋⠁⠄⠄⠄⠄
+//⠄⠄⣵⡄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⠁⣼⠁⠄⠄⠄⠄⠄⠄⠄⠙⢦⡈⠚⣄⣤⣽⣦⡄⠤⠤⠭⢅⠄⠄⠄⠄⠄⠄⠄⠄⠄⠘⠻⣯⡉⡀⣀⡴⣇⡃⠄⠘⢻⣍⡇⢺⡏⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣠⠟⠁⠄⠄⠄⠄⠄⠄⣠⠎⠄⠄⠄⠄⠄⠄⠄⠄⢠⡏⠄⠄⣀⣴⠞⠁⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠹⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣼⠏⢠⡟⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠙⢦⡙⢯⣙⠿⣿⣿⠇⠄⡠⠂⠄⣄⠄⠄⠄⠄⠄⠄⠄⠄⢣⠝⣿⣏⢀⢀⠅⠁⠄⠈⠻⡇⠄⠘⢦⡀⠄⠄⠄⠄⠄⠄⠄⠄⢀⡴⠏⠄⠄⠄⠄⠄⠄⢀⡼⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⡿⠁⣠⡾⠋⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⢀⡀⠐⣿⡄⣴⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢠⡟⠄⣿⠇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠉⠳⢹⠒⠶⠒⠋⠁⠄⠄⠄⠸⣄⣀⡴⠄⠄⠄⢠⠔⠦⣄⠈⠜⠛⠷⢖⠿⠺⠗⠋⠈⠄⠄⠄⠙⠂⠄⠄⠄⠄⠄⠄⠄⡾⠁⠄⠄⠄⠄⠄⠄⠄⠄⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠐⠶⠚⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡠
+//⢴⣷⡀⢻⢠⠇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠅⠄⠄⢀⣾⠁⢸⡟⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⣤⠴⠒⢀⣀⣙⣢⣄⡀⠄⠄⠄⠄⠄⠉⠄⠄⠄⠄⠄⠈⣇⡴⣿⣿⠷⠴⠤⣀⠄⠄⠄⠄⠄⠄⢀⡠⠐⠁⠄⠄⠄⠄⠄⠄⣰⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡜⠁
+//⣸⡇⠈⠺⠉⠒⠠⠤⢀⣀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠆⠄⢀⣾⠁⠄⣿⣀⡀⣀⣀⣀⣀⡠⠤⠤⠖⠊⠉⠄⣠⡶⠟⠋⠁⠄⠄⣉⠓⠦⠤⣄⡀⠄⠄⠄⠄⠄⠄⠄⠄⠻⠆⠹⠟⠻⣃⣀⠄⠄⠄⡀⠔⠂⠁⠄⠄⠄⠄⠄⣠⠊⠄⣐⡏⠄⠄⠄⠄⠄⣰⠖⠒⠦⢤⣀⡀⡀⣀⠤⠤⠒⠐⠄⠄⢧⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⠜⠄⠄
+//⣼⣿⠄⠄⠄⠄⠄⠄⠄⠄⠈⣰⠶⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⣾⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⣀⣠⠤⠶⠚⠋⢁⠄⠱⣦⡠⠴⠚⠁⠄⠄⠄⠄⠈⠙⠓⢦⣶⢤⣤⣀⣀⣀⣈⣉⣡⣽⠭⠓⠒⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⢰⠁⠄⢀⢻⠂⠄⠄⠄⠄⣠⠇⠄⠄⠄⠄⠄⠁⠉⠄⠄⠄⠄⠄⠄⠄⠈⢷⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠞⢀⣠⠶
+//⠉⣿⠄⠄⠄⢀⡄⠄⠄⠰⡏⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠘⠛⠖⠒⡚⠛⠛⢶⠒⠒⠚⠉⠉⠈⠄⣀⣠⠴⠊⠄⠄⠄⠈⠳⣄⡀⠄⠄⠄⢀⠄⠄⠄⠄⠈⡇⠄⠄⠄⠄⠄⢿⡄⠈⠧⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⠇⠄⢀⡜⠎⠄⠄⠄⠄⣰⠇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠘⠣⣀⠄⠄⠄⠄⠄⠄⠄⣀⡴⠃⠁⠄
+//⠄⣿⠄⠄⣠⠿⠃⠄⠄⠄⠄⢷⣀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⣸⢷⡌⠄⡀⠄⣤⣤⠼⠟⠋⠄⠄⠄⠄⠄⠄⠄⠄⠉⠳⢄⠰⠊⠙⣦⠄⠄⠄⠄⢿⡀⠄⠄⠄⠄⠈⢻⣦⠄⠙⣄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡎⠄⠄⣼⠁⠓⣀⣤⣴⡦⠏⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠙⠛⠲⢤⣀⠄⠄⠄⠄⠄⠄⠄
+//⠄⢸⢀⣴⠋⠄⠷⠄⠄⠄⠄⠄⠘⠳⡄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⠃⡿⠄⠙⢀⣁⣬⣿⡆⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡴⠃⠄⠄⠙⣧⠄⠄⢠⣼⣧⠄⠄⠄⠄⠄⠄⠙⢷⣄⠄⠣⣄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⢰⡇⢸⠋⠉⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠉⢱⠄⠄⠄⠄⠄⠄
+//⢠⡼⠟⠃⠄⠄⠇⠄⠄⠄⠄⣿⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢰⡟⠸⡇⢠⡟⠉⠁⣸⣿⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⣴⠖⠋⠄⠄⠄⠄⠄⢈⣠⠞⠉⠹⣧⣷⠄⠄⠄⠄⠄⠄⠈⠉⠣⣄⠈⠳⢀⠄⠄⠄⠄⠄⣼⠁⠄⣾⠁⠈⣃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡼⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⢹⠄⠄⠄⠄⠹⢆⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡀⠄⠄⢸⣿⠄⠄⠄⣿⠏⠄⠄⠄⠄⠄⠄⠄⠄⣾⠉⠁⠄⠄⠄⠄⠄⠄⢴⠾⠋⠁⠄⠄⠄⠹⣿⡀⢀⠄⠄⠄⠄⠄⠄⠄⠉⠢⣄⠉⠳⢤⠄⠄⢠⡏⠄⢰⡏⠄⠄⢻⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣾⠃⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⡄⠄⠄⠄⠄⡀⢸⠄⠄⠄⠄⠄⠄⠄⠄⣀⡤⠈⠉⠁⠄⢀⠔⣿⣃⣀⡀⣼⡏⠄⠄⠄⠄⠄⠄⠄⠄⢠⡏⠄⠄⠄⠄⠄⠄⠄⠄⠄⢇⠄⠄⠄⠄⠄⠄⠈⢷⠟⡆⠄⠄⠄⠄⠄⢠⠎⠄⠈⠢⣄⠄⠻⢆⣘⠁⠄⣸⠁⠄⢠⣿⡃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢣⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⣼⠁⠄⠄⢀⡿⢿⡿⠄⠄⠄⠄⠄⠄⢀⡼⠋⠄⠄⠄⢀⡰⠃⢸⡇⠄⠄⠖⠛⢷⠤⡤⠴⢄⣤⡤⠄⢀⡞⠄⠄⠄⠄⠄⡀⠄⠄⠄⠄⠘⢆⠄⠄⠄⠄⠄⠄⣼⠄⢧⣤⣀⣀⣀⣠⣃⣀⣀⣀⣀⠌⠂⠤⡀⠁⠄⠄⠘⠄⣰⣿⠏⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⢴⡄⠄⠄⢀⠄⠄
+//⠄⠄⠄⠄⢠⡗⠄⠄⠄⣼⠄⠈⠉⠁⠄⠄⠄⠄⣀⠏⠄⠄⠄⠄⡸⠧⠡⠖⠋⠃⠄⠄⠘⡰⠋⠄⠅⠄⠄⢘⠦⣢⠄⠄⠄⠄⠄⣀⠆⢳⡄⠄⠄⠄⠄⣸⣦⠠⠁⠄⡀⢀⠃⠄⠄⣯⣠⣦⣵⣤⠭⣼⠅⣠⡏⠄⡰⠁⠁⠄⠄⠄⠄⣴⣿⠋⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡠⠔⠂⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠛⣄⠄⢀⣠⠴
+//⠄⠄⠄⠄⢸⣷⡜⡿⣼⡇⠄⠄⠄⠄⠄⠄⠄⢠⠟⠄⠄⠄⠄⡼⠁⡀⠄⠄⠄⠄⡠⠄⠊⠄⠄⢠⣃⡤⠖⠉⠄⢻⡀⠄⢀⣴⠟⠁⠄⠈⢷⠄⠄⠠⣟⢡⡼⠁⢰⠉⠻⣿⣀⠄⠄⠘⢇⠄⠄⠄⢠⡏⣰⡿⢀⠊⠄⠄⠄⢀⣬⡤⠤⣄⣉⠲⠄⠄⠄⣀⣀⠄⠒⠚⠉⠁⠄⠄⠄⠄⢀⠇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣠⠞⡠⠜⠈⠁⠄
+//⠄⠄⠄⠄⠘⡟⠄⠈⡹⠄⠄⠄⠄⠄⠄⠄⠄⣿⠄⠄⠄⠄⣼⠁⠄⠑⣀⠠⠘⠁⠄⠄⠄⠄⡀⠎⠳⢤⡀⠄⠄⠸⣇⠔⠈⠄⠄⠄⠄⠄⠘⠄⣄⣴⣻⡿⠁⠄⢾⠄⠄⠈⢻⣧⡢⢁⠈⠳⠄⠄⡻⢠⡟⠄⢃⠄⠄⣀⡼⠋⠘⢧⠄⣀⠭⠖⠚⠋⠁⠄⠄⠄⠄⣀⣀⠠⠄⠄⠄⠄⢼⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠰⠚⠙⠁⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠐⡁⠄⠄⠁⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⢰⡧⠔⠊⠉⠄⠄⠄⠄⠄⠄⡤⠜⠁⠄⠄⠄⠉⠳⣦⣘⢿⠄⠄⠄⠄⠄⠄⠄⣰⠞⢻⡉⣿⠃⠄⢠⡇⠄⠄⠄⣌⢪⠻⡀⣀⣀⠄⠄⢠⡟⠄⠄⣿⢳⣶⡟⠄⠄⠄⠄⠸⡄⠄⠄⢀⠄⠤⠐⠂⠄⠉⠉⠄⠄⠄⢰⠄⠄⠸⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠬⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠠⠐⠇⠂⠄⠄⠜⠄⠄⠄⠄⠄⠄⣀⡤⠒⠘⠁⠄⠄⠄⢀⣤⠴⠊⠄⠉⠄⠄⠄⠄⠄⢀⣤⡾⠋⠄⠄⢹⡏⠄⠄⢺⡽⠋⠁⠄⠘⢦⡀⠄⢿⡟⠻⣶⣯⣄⣀⢠⣯⣾⣿⠃⠄⠄⠄⠄⠄⠄⠳⡄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡸⠄⠄⡗⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣾⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⡀⠔⠒⠁⠄⠄⠄⠄⠄⠄⢀⠄⢀⣀⣠⠤⠶⠋⠁⠄⠄⠄⡀⡀⠄⠐⠊⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠛⠿⣤⣄⣀⠄⡿⠄⠄⡀⠾⠁⠄⠄⠄⠄⠈⣧⡏⢻⡇⠄⠄⠈⠛⠻⣿⣿⣿⡏⠄⠄⠄⣀⠄⠄⠄⠄⠄⠣⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠇⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠠⢒⣁⠠⠤⠤⠠⠄⠄⠄⠄⠄⠄⡼⠄⠈⠉⠁⠄⠄⠄⢀⣠⠔⠉⠄⢫⠄⠄⠄⠄⠄⠄⢂⠆⠄⠄⠄⢀⠄⠄⠄⠄⠄⠄⢠⡇⠄⠄⠐⠄⠄⠄⠄⠄⢀⣀⣧⣧⡸⠏⠄⠄⠄⠄⠄⠄⠸⢿⣷⠶⠿⢺⡏⠄⠄⠄⠄⠄⠄⠈⠲⡀⠄⠄⠄⠄⠄⠄⢸⡇⠄⠈⣧⠄⠄⠄⠄⠄⠄⢀⡀⠄⠉⠑⠓⠊⠁⠄⠄⠤⠐⠑⢦⡀⠄⠄
+//⣀⣀⣀⣀⣠⠄⠄⠈⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢠⠃⠈⠳⣤⣀⢀⠤⠛⠉⠄⠄⠄⠄⠈⡇⠄⠄⠄⠄⡴⠃⠄⠄⠄⠄⢸⡿⣶⣄⠄⠄⠄⢸⠁⠄⠄⠄⢂⠄⣤⣴⠞⠛⠉⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⡰⣿⠁⠄⠄⣿⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠖⡀⠄⠄⠄⠄⢸⡇⠄⠄⣿⢠⡀⠄⠄⠄⡄⠋⠄⠠⠔⠒⠓⠁⠄⠄⠄⠄⠄⠄⠈⠄⡀⠄
+//⠉⠉⠉⠉⢿⣁⡴⠒⠶⣦⣄⠄⠄⠄⠄⠄⡈⠄⣠⠏⠄⠄⠄⠄⠉⠙⠲⢤⡤⠄⠄⠄⠄⠄⠙⢇⠄⠄⠎⠄⢀⣀⡶⠄⠄⢸⡇⠈⠻⣷⡀⠄⠈⣆⠄⠄⠄⢸⡀⠄⠙⠳⢦⡤⠄⠄⠄⠄⠄⠄⠄⠄⠄⣰⣿⠋⠄⠄⠄⣿⠄⠄⠄⠄⣀⣠⡄⠄⠄⠄⠄⠉⠳⢦⠄⠄⢸⠁⠄⠄⣿⡀⠈⠳⢤⠊⠄⠘⠲⣶⣤⣤⣤⡄⠄⠄⠄⠄⠄⠄⠄⠄⠈⢡
+//⢁⠄⠄⠄⠠⠄⠴⠤⠄⠄⣹⠇⠄⠄⠄⠰⠃⠄⡞⠄⠄⠄⠄⠄⠄⠄⠄⠄⣸⠏⠁⠄⠄⠄⢀⣰⠂⠄⣀⣴⠟⠉⠹⡆⠄⣸⡇⠄⠄⠹⢿⡧⡄⠹⣆⠄⠄⠄⠳⢀⠄⢀⣔⠓⠄⠄⠄⢰⣷⣄⠄⠄⢠⡿⠁⠄⠄⠄⠄⠛⠛⠛⠋⠁⠄⣾⠁⠄⠄⠄⠄⠄⠄⠄⠁⠢⢸⠄⠄⠄⠝⢱⡀⠄⡤⠤⠰⠒⠲⠴⠸⠟⠿⠿⠻⡶⢤⢤⣄⡀⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠉⠙⠉⠻⡀⠄⠄⠚⠄⠄⠄⠰⠄⠄⠄⠄⠄⣰⣿⠤⠔⠖⠛⠉⠉⢀⣤⡿⠋⠄⠄⠄⠄⢹⠄⠙⣇⣤⣀⣀⣀⣀⣭⡆⢟⢆⠄⠄⠈⢁⣰⡿⠁⠄⠄⠄⢀⣾⠂⠹⠷⣶⡿⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠰⣏⠄⠄⠄⠄⠄⢀⠄⠄⠄⠄⠄⠙⠂⣤⣂⠄⠙⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠈⠉⠋⠙⠛⠖
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⡿⠄⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⢠⡿⠄⠄⠄⠄⢀⣤⣾⠛⠄⠄⠄⠄⠄⠄⠄⠈⢷⣌⠏⠈⠉⠄⠁⠈⠄⡇⠄⠋⣷⣄⢀⡴⠋⠄⠄⠄⠄⠄⢸⡟⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠘⣿⠄⢀⣠⡤⢶⡏⠄⠄⠄⠄⠄⠄⠄⠄⠙⠛⢲⡿⠤⣀⣄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣄⡏⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⠁⠄⢀⣠⡶⠛⠁⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⡅⣷⠄⠄⠄⠄⠄⢴⡇⠄⠄⠈⠻⣼⡷⢦⣤⣴⠄⠄⠄⢾⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠛⠉⠉⠄⠄⢸⠄⠄⠄⠄⣠⠂⠄⠄⠄⣠⡼⠋⠄⠄⠄⠄⠈⠄⠤⣀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⠄⠄⠄⠄⠄⠄⢀⡤⠴⠶⠋⠄⠤⢄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠘⡆⠬⠟⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡆⠰⠤⣤⣸⣄⠄⠄⠄⠄⢸⠃⠄⠄⠄⠄⢸⣧⣾⣿⠃⠄⠄⠄⣾⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣷⣀⣠⠤⢺⠇⠄⢀⣤⠟⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠢⣄⣀⠄⠄⠄⠄⠄⠄⠄⠄⠄
+//⠄⠄⣠⣤⢀⣀⣀⢰⠟⠄⠄⠄⠄⠄⢀⣠⠐⠦⡀⠄⠄⠄⠄⠄⠄⠄⠄⠸⡆⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣼⠃⠄⠄⣀⣀⣀⣀⣀⣀⠄⠸⣻⡿⠖⠶⠤⡾⢋⣿⠇⠄⠄⠄⢠⣿⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠉⣡⡄⢀⣿⣶⠿⠛⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠐⠠⢀⡀⠄⠄⠄⠄⠄
