--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Homeworld.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Homeworld.cfg
@@ -19,13 +19,13 @@
 			longitude = 47.96
 			decalLatitude = 0
 			decalLongitude = 47.96
-			reorientFinalAngle = 0
+			reorientFinalAngle = 222
 			repositionRadiusOffset = 42
 			heightMapDeformity = 70
 			
 			
 			
-			groundColor = #6d5a51
+			groundColor = RGBA(70,74,47,200)
 			groundTexture = BUILTIN/ksc_exterior_terrain_ground
 		}
 		@Template
