--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
@@ -147,7 +147,7 @@
 				{
 					order = 101
 					enabled = True
-					name = LargerCraters
+					name = MediumCraters
 					multiplierMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/PluginData/Lu_CraterMultMap.png
 					Mod
 					{
@@ -195,7 +195,7 @@
 				{
 					order = 100
 					enabled = True
-					name = MiddleCraters
+					name = LargestCraters
 					multiplierMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/PluginData/Lu_CraterMultMap.png
 					Mod
 					{
