--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt.cfg
@@ -53,7 +53,7 @@
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
 			semiMajorAxis = 14959787070
-			iconTexture = PJ2/KopernicusFiles/00_System/Icons/BarycenterIcon.png
+			iconTexture = PJ2/KopernicusFiles/00_System/Icons/BarycenterIconBD.png
 			
 			//SMA in kAU:
 			@semiMajorAxis *= 0.0264
@@ -64,6 +64,7 @@
 			meanAnomalyAtEpochD = 101
 			inclination = 0.2
 			icon = OBJ_PE_AP
+			iconColor = 1,1,1,1
 		}
 		ScaledVersion
 		{
