--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0-Tobalk.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0-Tobalk.cfg
@@ -35,7 +35,7 @@
 			referenceBody = PJ2/AB_Barycenter
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = #434241
+			color = 0.511538327,0.528054953,0.539516985,1
 			
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
