--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
@@ -19,7 +19,7 @@
 			
 			//do not leave this as the placeholder radius
 			radius = 193400
-			
+			description = Upon its discovery, Kialla was declared to be the definitive edge of the Ilio system. This podium would not last long, however, as soon enough an entire population of bodies on the edge of the system would be identified. Upon this realization, the oh-so-wise dynamicists of Armstrong decided to move the goal-post to Tobalk-Turtlestar, and declared the rest, "Just There." Despite the silly semantics, REAL planetary astronomers recognize the Kialla system as a diverse hub of icy bodies just waiting to be understood.\n\n-JoQueeb
 			// 1/100 earth mass in kilograms
 			mass = 5.23e20
 			biomeMap = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/KiallaBiome.png
@@ -62,7 +62,7 @@
 			referenceBody = PJ2/AB_Barycenter
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = 0.5,0.5,0.5,1
+			color = 0.292307764,0.280769467,0.257692188,1
 			
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
@@ -77,17 +77,18 @@
 			argumentOfPeriapsis = 239
 			meanAnomalyAtEpochD = 218
 			inclination = 28
+			iconTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Textures/LargeRock.png
 		}
 		ScaledVersion
 		{
-			type = Vacuum
+			type = AtmosphericStandard
 			fadeStart = 10000
 			fadeEnd = 15000
 			Material
 			{
 				color = 1,1,1,1
-				shininess = 0
-				specColor = 0,0,0,0
+				specColor = 0.115384601,0.0961538479,0.115384698,1
+				shininess = 0.03
 				
 			}
 			OnDemand
