--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/2_Blitzø.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/2_Blitzø.cfg
@@ -53,7 +53,8 @@
 			argumentOfPeriapsis = 163
 			meanAnomalyAtEpochD = 73.5
 			epoch = 0
-			color = RGBA(200, 200, 200, 255)
+			color = 0.549698114,0.280769348,0.230467692,1
+			iconTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Textures/HahaHowAreYouSoSmall.png
 		}
 		ScaledVersion
 		{
