--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/3_Nevig.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/3_Nevig.cfg
@@ -61,7 +61,8 @@
 			argumentOfPeriapsis = 355
 			meanAnomalyAtEpochD = 24.4
 			epoch = 0
-			color = RGBA(200, 200, 200, 255)
+			color = 0.626923084,0.50354439,0.461237043,1
+			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Large.png
 		}
 		ScaledVersion
 		{
