--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_1_Phrye.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_1_Phrye.cfg
@@ -15,11 +15,11 @@
 			description = Phrye is a binary asteroid, with its companion being Wepor. They both orbit around Kialla, and of the two, Phrye is the primary companion. Phrye has an extremely low average albedo, with the exception of a few very specific areas on its surface. It is thought that these may be a large impact craters or depressions, which expose a layer of buried ice, increasing the reflectivity of these areas in comparison to the rest of Phrye's surface. [electricpants]
 			radius = 10500
 			//mass = 4.01500e15 //this was changed because it was about 20 times too low.
-			mass = 8.023e16
-			//fixed density = 1.439 g/cm^3 (at kerbal scale)
+			mass = 1.20345e17
+			//fixed density = 2.1585 g/cm^3 (at kerbal scale)
 			tidallyLocked = true
 			albedo = 0.1
-			sphereOfInfluence = 20000
+			sphereOfInfluence = 25000
 			inverseRotThresholdAltitude = 13000
 			maxZoom = 40000
 			biomeMap = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/Phrye_biome.png
@@ -54,15 +54,16 @@
 		Orbit
 		{
 			referenceBody = PJ2/BarycenterPW
-			semiMajorAxis = 12503.1133
-			period = 17038.58838573225
+			semiMajorAxis = 25006.2266
+			period = 39348.93436445498
 			eccentricity = 0
 			inclination = 0
 			longitudeOfAscendingNode = 0
 			argumentOfPeriapsis = 0
 			meanAnomalyAtEpochD = 0
 			epoch = 0
-			color = RGBA(200, 200, 200, 255)
+			color = 0.39230746,0.349999428,0.303544253,1
+			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Mid.png
 		}
 		ScaledVersion
 		{
