--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_2_Wepor.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_2_Wepor.cfg
@@ -15,12 +15,12 @@
 			description = Wepor is a binary asteroid, with its companion being Phrye. They both orbit around Kialla, and of the two, Wepor is the secondary companion. Wepor, as opposed to its more massive companion, is much brighter and icier, and in fact has one of the highest abledos of any object in the solar system--however, it has areas of notably lower albedo. Interestingly, despite being the same size as Phrye, Wepor is only around half its mass, making it notably less dense than Phrye. [electricpants]
 			radius = 10500
 			//mass = 2.51e15 //this was changed because it was about 20 times too low.
-			mass = 5.02e16
-			//fixed density = 0.9004 g/cm^3 (at kerbal scale)
+			mass = 7.53e16
+			//fixed density = 1.3506 g/cm^3 (at kerbal scale)
 			tidallyLocked = true
 			albedo = 0.9
-			sphereOfInfluence = 20000
-			inverseRotThresholdAltitude = 13000
+			sphereOfInfluence = 54990
+			inverseRotThresholdAltitude = 200000
 			maxZoom = 40000
 			biomeMap = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/Wepor_biome.png
 			Biomes
@@ -48,15 +48,16 @@
 		Orbit
 		{
 			referenceBody = PJ2/BarycenterPW
-			semiMajorAxis = 27496.8867
-			period = 17038.58838573225
+			semiMajorAxis = 54993.7734
+			period = 39348.93436445498
 			eccentricity = 0
 			inclination = 0
 			longitudeOfAscendingNode = 0
 			argumentOfPeriapsis = 0
 			meanAnomalyAtEpochD = 180
 			epoch = 0
-			color = RGBA(200, 200, 200, 255)
+			color = 0.64585197,0.622775257,0.618928671,1
+			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Mid.png
 		}
 		ScaledVersion
 		{
