--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/5_Twilight.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/5_Twilight.cfg
@@ -53,7 +53,8 @@
 			argumentOfPeriapsis = 148.5
 			meanAnomalyAtEpochD = 77
 			epoch = 0
-			color = RGBA(200, 200, 200, 255)
+			color = 0.342006207,0.353543967,0.373077095,1
+			iconTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Textures/HahaHowAreYouSoSmall.png
 		}
 		ScaledVersion
 		{
