--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/4-Pi.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/4-Pi.cfg
@@ -53,6 +53,7 @@
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 0
             epoch = 0
+			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Large.png
         }
         ScaledVersion
         {
