--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_i_Somna.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_i_Somna.cfg
@@ -16,7 +16,7 @@
 		Properties
 		{
 			displayName = Somna^N
-			description = Somna is the odd little moon of Gerro. It almost looks like a half moon, showing only one face to either side. Some have compared it to a black-and-white cookie or a scoop of twist ice cream. Tantalizing enough to be mildly mouthwatering, but how much exactly still remains to be seen./n-Interplanet Janet
+			description = Somna is the odd little moon of Gerro. It almost looks like a half moon, showing only one face to either side. Some have compared it to a black-and-white cookie or a scoop of twist ice cream. Tantalizing enough to be mildly mouthwatering, but how much exactly still remains to be seen.\n\n-Interplanet Janet & Luna
 			
 			//do not leave this as the placeholder radius
 			radius = 128000
@@ -118,12 +118,11 @@
 			{
 				shininess = 0.03
 				specColor = 0.1, 0.1, 0.1, 1
-				type = Vacuum
 			}
 			OnDemand
 			{
-				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Somna_color.dds
-				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Somna_normal.dds
+				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Somna_Colormap.png
+				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Somna_Normal.png
 			}
 		}
 		PQS
@@ -136,7 +135,7 @@
 				VertexMitchellNetravaliHeightMap
 				{
 					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Somna_height.png
-					offset = 0
+					offset = 600
 					deformity = 5500
 					scaleDeformityByRadius = False
 					B = 1
@@ -145,9 +144,13 @@
 					enabled = True
 					name = VertexMitchellNetravaliHeightMap
 				}
+				VertexColorMap
+				{
+					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Somna_Colormap.png
+				}
 				HeightColorMap
 				{
-					blend = 1
+					blend = 0
 					order = 5
 					enabled = True
 					name = HeightColorMap
@@ -199,6 +202,46 @@
 							delete = False
 						}
 					}
+				}
+				VertexSimplexNoiseColor
+				{
+					blend = 0.1
+					colorStart = 0,0,0,1
+					colorEnd = 1,1,1,1
+					frequency = 4
+					octaves = 8
+					persistence = 0.600000023841858
+					seed = 0
+					order = 200
+					enabled = True
+					name = _ColorNoise
+				}
+				VertexSimplexHeight
+				{
+					deformity = 400
+					frequency = 12
+					octaves = 8
+					persistence = 0.5
+					seed = 2211221
+					order = 102
+					enabled = True
+					name = _HeightNoise
+				}
+				VertexHeightNoiseVertHeight
+				{
+					heightStart = 0
+					heightEnd = 1
+					deformity = 400
+					frequency = 12
+					octaves = 6
+					persistance = 0.5
+					seed = 1283704385
+					mode = Low
+					noiseType = Perlin
+					lacunarity = 2
+					order = 103
+					enabled = True
+					name = _HeightNoise
 				}
 				VertexHeightNoiseVertHeightCurve2
 				{
@@ -256,33 +299,34 @@
 				}
 				VoronoiCraters
 				{
-					colorOpacity = 0.05
+					colorOpacity = 0
 					DebugColorMapping = False
-					deformation = 600
+					deformation = 500
 					jitter = 0.1
-					jitterHeight = 2
+					jitterHeight = 3
 					rFactor = 1
-					rOffset = 1.1
-					simplexFrequency = 100
+					rOffset = 1
+					simplexFrequency = 120
 					simplexOctaves = 3
 					simplexPersistence = 0.5
-					simplexSeed = 143113
+					simplexSeed = 123123
 					voronoiDisplacement = 0
-					voronoiFrequency = 10
-					voronoiSeed = 456
-					order = 7
+					voronoiFrequency = 22
+					voronoiSeed = 824
+					order = 101
 					enabled = True
-					name = VoronoiCraters
+					name = _HeightNoise
 					CraterCurve
 					{
-						key = -0.9963056 -0.7950293 -0.1902251 -0.1902251
-						key = -0.9520697 -0.8223228 -0.6806358 -0.6806358
+						key = -0.9982381 -0.7411783 -0.06500059 -0.06500059
+						key = -0.9332262 -0.7678316 -0.2176399 -0.2176399
+						key = -0.8990405 -0.7433339 -2.560626 -2.560626
 						key = -0.7445966 -0.8581167 0.4436148 0.4436148
 						key = -0.4499771 -0.1392395 5.289535 5.289535
 						key = -0.4015177 0.2551735 9.069458 -2.149609
-						key = -0.2297457 0.08363447 -0.4453675 -0.4453675
-						key = 0.2817185 0.01192154 0.01421198 0.01421198
-						key = 1.000876 0.001117015 0.01397126 0.01397126
+						key = -0.2297457 0.002857953 -0.4453675 -0.4453675
+						key = 0.2724952 0.00423781 -0.01884932 -0.01884932
+						key = 0.9998434 -0.004090764 0.01397126 0.01397126
 					}
 					JitterCurve
 					{
@@ -290,14 +334,14 @@
 						key = -0.7884969 0.09487452 -0.7739663 -0.7739663
 						key = -0.6091803 0.072019 0.123537 0.123537
 						key = -0.3930514 0.3903495 3.300831 3.300831
-						key = -0.3141366 0.9276265 0 0
-						key = -0.2586833 0.002564805 -0.01814346 -0.01814346
+						key = -0.3584836 0.8643304 0.07139917 0.07139917
+						key = -0.2988068 0.002564805 -0.01814346 -0.01814346
 						key = 0.9970253 0.003401639 0 0
 					}
 				}
 				VoronoiCraters
 				{
-					colorOpacity = 0.03
+					colorOpacity = 0
 					DebugColorMapping = False
 					deformation = 200
 					jitter = 0.1
@@ -305,15 +349,15 @@
 					rFactor = 1
 					rOffset = 1.1
 					simplexFrequency = 300
-					simplexOctaves = 9
+					simplexOctaves = 3
 					simplexPersistence = 0.5
-					simplexSeed = 143113
+					simplexSeed = 123123
 					voronoiDisplacement = 0
-					voronoiFrequency = 10
-					voronoiSeed = 169420
-					order = 8
+					voronoiFrequency = 50
+					voronoiSeed = 462
+					order = 100
 					enabled = True
-					name = VoronoiCraters
+					name = _HeightNoise
 					CraterCurve
 					{
 						key = -0.9963056 -0.7950293 -0.1902251 -0.1902251
