--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0a-Hadfield.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0a-Hadfield.cfg
@@ -64,6 +64,7 @@
 			argumentOfPeriapsis = 333 //273 + 60
 			meanAnomalyAtEpochD = 256
 			inclination = 1.3 //1.77
+			iconTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Textures/LargeRock.png
         }
         ScaledVersion
         {
